WIP: Making water with foam and depth.

--- a/src/static/Fog.html
+++ b/src/static/Fog.html
@@ -16,7 +16,7 @@
     <canvas class="webglView"></canvas>
 
     <script src="/scripts/vendor.bundle.js"></script>
-    <script src="/scripts/main.bundle.js"></script>
+    <script src="/scripts/fog.bundle.js"></script>
 
 </body>
 
