WIP: Made cube combustion.

--- a/src/static/Combustion.html
+++ b/src/static/Combustion.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Water</title>
+    <title>Combustion</title>
 
     <link href="./css/style.css" rel="stylesheet" />
 
@@ -16,7 +16,7 @@
     <canvas class="webglView"></canvas>
 
     <script src="/scripts/vendor.bundle.js"></script>
-    <script src="/scripts/water.bundle.js"></script>
+    <script src="/scripts/combustion.bundle.js"></script>
 
 </body>
 
